--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,33 @@
 /* You can add global styles to this file, and also import other style files */
+
+:root {
+  /* Color
+  ================================================*/
+
+  /*Primary Color*/
+  --primary-color: #ef6c00;
+  --primary-color-light: #ff9d3f;
+  --primary-color-dark: #b53d00;
+
+  --bg-light-color: #f5f5f5;
+}
+
+html {
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+  font-size: 62.5%;
+}
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
