adding to home display the username to person logg in

--- a/src/app/components/dashboard/home/home.component.html
+++ b/src/app/components/dashboard/home/home.component.html
@@ -1,5 +1,12 @@
 <div class="container">
-  <mat-toolbar>
-    <span>Home</span>
-  </mat-toolbar>
+    <mat-toolbar>
+        <span>Home</span>
+    </mat-toolbar>
+    <section>
+        <div class="welcome-container">
+            <h2>
+                👋 Good to see you <strong>{{ dataName }}</strong>
+            </h2>
+        </div>
+    </section>
 </div>
