trying to solve problem

--- a/src/app/components/dashboard/home/home.component.html
+++ b/src/app/components/dashboard/home/home.component.html
@@ -5,7 +5,7 @@
     <section>
         <div class="welcome-container">
             <h2>
-                👋 Good to see you <strong>{{ dataName }}</strong>
+                👋 Good to see you <strong>{{ dataName }}</strong>!!
             </h2>
         </div>
     </section>
