--- a/src/app/components/dashboard/navbar/navbar.component.css
+++ b/src/app/components/dashboard/navbar/navbar.component.css
@@ -1,3 +1,79 @@
-.navbar-spacer {
-  flex: 1 1 auto;
+mat-toolbar {
+  font-size: 1.5rem;
+  position: relative;
+}
+
+.nav-items div.items > button {
+  display: none;
+}
+
+.menu-icon {
+  display: inline-block;
+  position: absolute;
+  right: 4rem;
+  top: 1.2rem;
+  z-index: 2;
+  opacity: 0;
+  cursor: pointer;
+  width: 2.5rem;
+  height: 2.5rem;
+}
+
+.menu-icon:checked ~ .items {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-right: 3rem;
+}
+
+.menu-icon:checked ~ .items > button:nth-child(1) {
+  margin-top: 3rem;
+}
+.menu-icon:checked {
+  right: 6.8rem;
+  top: 1.2rem;
+}
+
+.menu-icon:checked ~ .items > button {
+  display: inline;
+  background-color: var(--primary-color-light);
+  padding: 0.3rem;
+}
+
+.items {
+  background-image: url('../../../../assets/images/baseline_menu_black_24dp.png');
+  width: 2.5rem;
+  height: 2.5rem;
+  position: absolute;
+  right: 4.3rem;
+  top: 1.5rem;
+  z-index: 1;
+  transition: all 0.5s ease;
+}
+
+/* mat-toolbar span {
+  color: red;
+} */
+
+@media screen and (min-width: 48rem) {
+  .navbar-spacer {
+    flex: 1 1 auto;
+  }
+  mat-toolbar span {
+    font-size: 2rem;
+  }
+  .nav-items div.items > button {
+    display: inline-block;
+  }
+  .nav-items div.items-menu {
+    display: none;
+  }
+  .items {
+    background: none;
+    width: auto;
+    height: auto;
+    position: relative;
+    right: 0px;
+    top: 0px;
+  }
 }
