--- a/src/app/components/dashboard/navbar/navbar.component.html
+++ b/src/app/components/dashboard/navbar/navbar.component.html
@@ -1,9 +1,14 @@
 <mat-toolbar color="primary">
     <span>Sistema de Alertas Tempranas FPI</span>
     <span class="navbar-spacer"></span>
-    <button mat-button routerLink="/dashboard">Home</button>
-    <button mat-button routerLink="/dashboard/reports">Reports</button>
-    <button mat-icon-button aria-label="icon-button to log out" (click)="logOut()">
-        <mat-icon>logout</mat-icon>
-    </button>
+    <nav class="nav-items">
+        <input type="checkbox" class="menu-icon" />
+        <div class="items">
+            <button mat-button routerLink="/dashboard">Home</button>
+            <button mat-button routerLink="/dashboard/reports">Reports</button>
+            <button mat-icon-button aria-label="icon-button to log out" (click)="logOut()">
+                <mat-icon>logout</mat-icon>
+            </button>
+        </div>
+    </nav>
 </mat-toolbar>
