--- a/src/app/components/dashboard/reports/reports.component.html
+++ b/src/app/components/dashboard/reports/reports.component.html
@@ -9,7 +9,7 @@
                 <mat-select formControlName="typeSearch">
                     <mat-option value="ficha">Ficha</mat-option>
                     <mat-option value="instructor">Nombre de Instructor</mat-option>
-                    <mat-option value="estudiante">Numero de Documento del Estudiante</mat-option>
+                    <mat-option value="estudiante">Numero de Documento del Aprendiz</mat-option>
                 </mat-select>
             </mat-form-field>
             <mat-form-field appearance="fill">
@@ -31,13 +31,13 @@
 
                 <!-- Nombre Column -->
                 <ng-container matColumnDef="nombre">
-                    <th mat-header-cell *matHeaderCellDef>Nombre Estudiante</th>
+                    <th mat-header-cell *matHeaderCellDef>Nombre Aprendiz</th>
                     <td mat-cell *matCellDef="let element">{{ element['NOMBRES'] }}</td>
                 </ng-container>
 
                 <!-- Apellido Column -->
                 <ng-container matColumnDef="apellido">
-                    <th mat-header-cell *matHeaderCellDef>Apellido Estudiante</th>
+                    <th mat-header-cell *matHeaderCellDef>Apellido Aprendiz</th>
                     <td mat-cell *matCellDef="let element">{{ element['APELLIDOS'] }}</td>
                 </ng-container>
 
